feat: Add markdown and code highlighting to the file viewer, implement bulk hash calculation, and enhance rclone provider option translations.

--- a/src/assets/i18n/en-US/main.json
+++ b/src/assets/i18n/en-US/main.json
@@ -1206,7 +1206,11 @@
       "failGetLink": "Failed to get public link",
       "failCopyLink": "Failed to copy - check console",
       "star": "Star",
-      "unstar": "Unstar"
+      "unstar": "Unstar",
+      "generatedChecksums": "Generated Checksums",
+      "calculateAnother": "Calculate Another",
+      "bulkHashInstruction": "Select a hash type to calculate checksums for all files in this directory.",
+      "noHashesFound": "No hashes returned"
     },
     "operations": {
       "title": "Operations",
