feat: Implement memory statistics display, manual garbage collection, and filesystem cache management.

--- a/src/assets/i18n/en-US/main.json
+++ b/src/assets/i18n/en-US/main.json
@@ -1533,7 +1533,37 @@
       "openDevTools": "Open DevTools",
       "restartApp": "Restart App",
       "remoteBackend": "Remote Backend",
-      "remoteUpdateInfo": "This instance is controlled by a remote server. Updates cannot be managed from here. For more information, please visit rclone issue"
+      "remoteUpdateInfo": "This instance is controlled by a remote server. Updates cannot be managed from here. For more information, please visit rclone issue",
+      "memory": "Memory",
+      "viewMemoryStats": "View Memory Statistics",
+      "memoryStats": "Memory Statistics",
+      "generalMemory": "General Memory",
+      "memAlloc": "Allocated",
+      "memTotalAlloc": "Total Allocated",
+      "memSys": "System",
+      "memMallocs": "Mallocs",
+      "memFrees": "Frees",
+      "heapMemory": "Heap Memory",
+      "memHeapAlloc": "Heap Alloc",
+      "memHeapSys": "Heap Sys",
+      "memHeapIdle": "Heap Idle",
+      "memHeapInuse": "Heap In Use",
+      "memHeapReleased": "Heap Released",
+      "memHeapObjects": "Heap Objects",
+      "stackMemory": "Stack Memory",
+      "memStackInuse": "Stack In Use",
+      "memStackSys": "Stack Sys",
+      "gc": "Garbage Collector",
+      "runningGc": "Running GC...",
+      "runGc": "Run GC",
+      "gcSuccess": "Garbage collection completed successfully",
+      "gcFailed": "Failed to run garbage collector",
+      "backendCache": "Backend Cache",
+      "entries": "Active Entries",
+      "clear": "Clear",
+      "clearing": "Clearing...",
+      "cacheCleared": "Cache cleared successfully",
+      "cacheClearFailed": "Failed to clear cache"
     },
     "logs": {
       "clearAll": "Clear All Logs",
