--- a/src/assets/i18n/tr-TR/main.json
+++ b/src/assets/i18n/tr-TR/main.json
@@ -1534,7 +1534,37 @@
       "openDevTools": "Geliştirici Araçlarını Aç",
       "restartApp": "Uygulamayı Yeniden Başlat",
       "remoteBackend": "Uzak Sunucu",
-      "remoteUpdateInfo": "Bu örnek uzak bir sunucu tarafından kontrol edilmektedir. Güncellemeler buradan yönetilemez. Daha fazla bilgi için lütfen rclone sorun kaydını ziyaret edin:"
+      "remoteUpdateInfo": "Bu örnek uzak bir sunucu tarafından kontrol edilmektedir. Güncellemeler buradan yönetilemez. Daha fazla bilgi için lütfen rclone sorun kaydını ziyaret edin:",
+      "memory": "Bellek",
+      "viewMemoryStats": "Bellek İstatistiklerini Görüntüle",
+      "memoryStats": "Bellek İstatistikleri",
+      "generalMemory": "Genel Bellek",
+      "memAlloc": "Ayrılan",
+      "memTotalAlloc": "Toplam Ayrılan",
+      "memSys": "Sistem",
+      "memMallocs": "Bellek Tahsisi",
+      "memFrees": "Serbest Bırakma",
+      "heapMemory": "Yığın Belleği",
+      "memHeapAlloc": "Yığın Ayrılan",
+      "memHeapSys": "Yığın Sis",
+      "memHeapIdle": "Yığın Boşta",
+      "memHeapInuse": "Yığın Kullanımda",
+      "memHeapReleased": "Yığın Serbest",
+      "memHeapObjects": "Yığın Nesneleri",
+      "stackMemory": "Yığıt Belleği",
+      "memStackInuse": "Yığıt Kullanımda",
+      "memStackSys": "Yığıt Sis",
+      "gc": "Çöp Toplayıcı",
+      "runningGc": "Çöp Toplayıcı Çalışıyor...",
+      "runGc": "Çöp Toplayıcıyı Çalıştır",
+      "gcSuccess": "Çöp toplama işlemi başarıyla tamamlandı",
+      "gcFailed": "Çöp toplayıcı çalıştırılamadı",
+      "backendCache": "Arka Uç Önbelleği",
+      "entries": "Aktif Girdi",
+      "clearing": "Temizleniyor...",
+      "clear": "Temizle",
+      "cacheCleared": "Önbellek başarıyla temizlendi",
+      "cacheClearFailed": "Önbellek temizlenemedi"
     },
     "logs": {
       "clearAll": "Tüm Günlükleri Temizle",
