feat: Implement stats group management, add local disk usage, and enhance job control with group stopping.

--- a/src/assets/i18n/en-US/main.json
+++ b/src/assets/i18n/en-US/main.json
@@ -584,6 +584,7 @@
       "title": "Transfer Activity",
       "active": "Active:",
       "recent": "Recent:",
+      "resetStats": "Reset Stats",
       "tabs": {
         "active": "Active ({{count}})",
         "recent": "Recent ({{count}})"
