--- a/src/assets/i18n/tr-TR/main.json
+++ b/src/assets/i18n/tr-TR/main.json
@@ -585,6 +585,7 @@
       "title": "Transfer Etkinliği",
       "active": "Aktif:",
       "recent": "Son:",
+      "resetStats": "Etkinlikleri Sıfırla",
       "tabs": {
         "active": "Aktif ({{count}})",
         "recent": "Son ({{count}})"
